--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/*zeroing out styles*/
+
 * {
     padding: 0;
     margin: 0;
@@ -85,4 +87,14 @@ h5,
 h6 {
     font-size: inherit;
     font-weight: inherit;
+}
+
+/*===============================================*/
+
+* {
+    font-family: 'Montserrat Regular';
+}
+.container {
+    max-width: 1400px;
+    margin: 0 auto;
 }
